Fix text alignment.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ input {
 
 .country-info > p {
     margin-top: 16px;
-    text-align: center;
 }
 
 .country-info img {
